# aoc-2024

./: Cargo.toml  README.md
benches/day01/: main.rs
day01/: Cargo.toml
day01/benches/: task2.rs
day01/src/: lib.rs  main.rs
day02/src/: main.rs
day03/src/: main.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  lib.rs
